[project]
name = "pyhurl"
description = "A set of useful functions that I use in projects."
version = "0.0.1"
authors = [
    { name = "Rongliang Hu", email = "hurongliang@mail.com" }
]
maintainers = [
    { name = "Rongliang Hu", email = "hurongliang@mail.com" }
]
dependencies = [
    "pymysql",
    "python-dotenv",
    "oss2",
    "openai",
    "ollama"
]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">= 3.8"
license = {text = "Apache Software License"}

[project.urls]
Homepage = "https://github.com/hurongliang/pyhurl"
Repository = "https://github.com/hurongliang/pyhurl.git"
